@@ -1,0 +1,7 @@
+[app:main]
+use = egg:dulwich
+
+[server:main]
+use = egg:Paste#http
+host = localhost
+port = 8000
