@@ -11,6 +11,10 @@
 
   * Sphinxified documentation. (Lukasz Balcerzak)
 
+  * Added an entry point (dulwich.web.make_paster_app) for Paste.Deploy to be
+    able to determine how to create an instance of HTTPGitApplication.
+    (David Blewett)
+
 0.7.0	2011-01-21
 
  FEATURES
